--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
+          [Link to Google Home](https://sites.google.com/view/goboardproject/home).
+        
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
