--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-          [Link to Google Home](https://sites.google.com/view/goboardproject/home).
+        <p class="view"><a href="{{ https://sites.google.com/view/goboardproject/home }}">View My Google site</a></p>
         
         {% if site.show_downloads %}
         <ul class="downloads">
