--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,8 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p><a href="https://sites.google.com/view/goboardproject/home">View My Google site</a></p>
+
+        <p><a href="https://www.microsoft.com/store/apps/9MT0M2CVM7HJ">App Download at MS App Store</a></p>
         
         {% if site.show_downloads %}
         <ul class="downloads">
