--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
         <p><a href="https://sites.google.com/view/goboardproject/home">View My Google site</a></p>
 
-        <p><a href="https://www.microsoft.com/store/apps/9MT0M2CVM7HJ">App Download at MS App Store</a></p>
+        <p><a href="https://www.microsoft.com/store/apps/9MT0M2CVM7HJ">Download from MS App Store</a></p>
         
         {% if site.show_downloads %}
         <ul class="downloads">
