--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
+        <img src="../Assets/Devil face.png" />
+        
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p><a href="https://sites.google.com/view/goboardproject/home">View My Google site</a></p>
