--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 
         <img src="../Assets/Devil face.png" />
         
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p style="text-align:center;">{{ site.description | default: site.github.project_tagline }}</p>
 
         <p><a href="https://sites.google.com/view/goboardproject/home">View My Google site</a></p>
 
