--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
         
         <p style="text-align:center;">{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p><a href="https://sites.google.com/view/goboardproject/home">View My Google site</a></p>
+        <p style="text-align:center;"><a href="https://sites.google.com/view/goboardproject/home">Google site</a></p>
 
-        <p><a href="https://www.microsoft.com/store/apps/9MT0M2CVM7HJ">Download from MS App Store</a></p>
+        <p style="text-align:center;"><a href="https://www.microsoft.com/store/apps/9MT0M2CVM7HJ">Download from MS App Store</a></p>
         
         {% if site.show_downloads %}
         <ul class="downloads">
