--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,9 @@
         <img src="../Assets/Devil face.png" />
         
         <p style="text-align:center;">{{ site.description | default: site.github.project_tagline }}</p>
-
-
-
-
-        
+        &nbsp
+        &nbsp
+        &nbsp        
         <p style="text-align:center;"><a href="https://sites.google.com/view/goboardproject/home">Google site</a></p>
 
         <p style="text-align:center;"><a href="https://www.microsoft.com/store/apps/9MT0M2CVM7HJ">Download from MS App Store</a></p>
